--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^6.1.0",
-    "usa-states": "^0.0.6"
+    "usa-states": "^0.0.6",
+    "xss-clean": "^0.1.4"
   }
 }
